# RetroStream

./: .gitignore  Cargo.toml  Dockerfile  INFO.md  README.md  docker-compose.yaml  shell.nix
frontend/: vite.config.ts
frontend/src/: main.ts
frontend/src/stream/: Decompressor.ts  FrameBuffer.ts
frontend/src/styles/: main.css
frontend/src/utils/: Logger.ts
screen-stream-app/: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  demo.md  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  run.sh
screen-stream-app/backend/: Cargo.toml  config.toml
screen-stream-app/backend/src/: capture.rs  config.rs  main.rs
screen-stream-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json
screen-stream-app/frontend/src/config/: Config.ts
screen-stream-app/frontend/src/stream/: StreamClient.ts
screen-stream-app/frontend/src/ui/: UIController.ts
screen-stream-app/frontend/src/utils/: EventEmitter.ts
src/: capture.rs  compression.rs  error.rs  metrics.rs  websocket.rs
