[package]
name = "screen-stream-backend"
version = "0.1.0"
edition = "2021"
authors = ["Screen Stream App"]
description = "High-performance screen streaming backend with WebSocket support"

[dependencies]
# Web server and WebSocket
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Screen capture - disabled for WSL
# xcap = "0.7"

# Compression and serialization
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
xcap = "0.7"

# Performance monitoring (optional - can be added later)
# metrics = "0.22"
# metrics-exporter-prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
